# minilog

./: CHANGELOG.md  LICENSE  README.md  UNIFICATION_OLD.md  WRITEUP.md  factorial.pl  minilog.cabal  natural.pl
app/: Main.hs
src/: Lexer.x  Parser.y  Term.hs  Token.hs  Visualize.hs
src/AST/: Goal.hs  Predicate.hs  Term.hs
src/Evaluate/: State.hs  Step.hs
