cabal-version:      3.0
name:               minilog
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
maintainer:         lambduli@gmail.com
author:             lambduli
category:           Language
build-type:         Simple
extra-source-files:
    src/Lexer.x
    src/Parser.y

extra-doc-files:    CHANGELOG.md

library
    exposed-modules:
        Term
        Evaluate.State
        Evaluate.Step
        Token
        Lexer
        Parser
        Visualize

    build-tool-depends: alex:alex >=3.2.6 && <4.0, happy:happy >=1.20.0 && <2.0
    hs-source-dirs:     src
    default-language:   Haskell2010
    default-extensions: NamedFieldPuns ImportQualifiedPost
    build-depends:
        array,
        base >=4.7 && <5,
        containers >=0.6.2.1,
        directory,
        extra,
        filepath,
        hspec,
        mtl,
        transformers,
        utf8-string

executable minilog
    main-is:            Main.hs
    hs-source-dirs:     app
    default-language:   Haskell2010
    default-extensions: NamedFieldPuns ImportQualifiedPost
    ghc-options:        -Wall
    build-depends:
        minilog,
        base ^>=4.17.0.0,
        containers >=0.6.2.1
